--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <main>
-        <section class="hero hero-b2c">
+        <section class="hero hero-b2c" style="background: linear-gradient(135deg, rgba(13, 27, 42, 0.85) 0%, rgba(10, 25, 41, 0.85) 100%), url('https://images.unsplash.com/photo-1446776877081-d282a0f896e2?w=1920&q=80'); background-size: cover; background-position: center;">
             <div class="hero-content">
                 <h1>Welcome to Lunarculture</h1>
                 <p class="hero-subtitle">Inspired by the Cosmos. We deliver innovative solutions that drive results and exceed expectations.</p>
